redis/5.2/modules/ROOT/pages/redis-connector-reference.adoc


= Redis Module Documentation Reference



== Configurations
---
[[redis]]
=== Redis


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<redis_clustered, Clustered>> 
* <<redis_nonclustered, NonClustered>> 
 | The connection types to provide to this configuration. | | x
| Expiration Policy a| <<ExpirationPolicy>> |  +++Configures the minimum amount of time that a dynamic configuration instance can remain idle before the runtime considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. The runtime purges the instances when it sees fit.+++ |  | 
|===

==== Connection Types
[[redis_clustered]]
===== Clustered


====== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Endpoint identification algorithm a| Enumeration, one of:

** HTTPS
** LDAPS
** DISABLED |  +++The endpoint identification algorithm used by clients to validate server host name. The default value is an empty string, which means it is disabled. Clients including client connections created by the broker for inter-broker communication verify that the broker host name matches the host name in the brokers certificate.+++ |  +++DISABLED+++ | 
| TLS Configuration a| <<Tls>> |  +++Protocol to use for communication. Valid values are HTTP and HTTPS. Default value is HTTP. When using HTTPS the HTTP communication is going to be secured using TLS / SSL. If HTTPS was configured as protocol then the user needs to configure at least the keystore in the tls:context child element of this listener-config.+++ |  | 
| Max Total a| Number |  |  +++8+++ | 
| Max Idle a| Number |  |  +++8+++ | 
| Min Idle a| Number |  |  +++0+++ | 
| Lifo a| Boolean |  |  +++true+++ | 
| Fairness a| Boolean |  |  +++false+++ | 
| Max Wait Millis a| Number |  |  +++-1+++ | 
| Min Evictable Idle Time Millis a| Number |  |  +++1800000+++ | 
| Soft Min Evictable Idle Time Millis a| Number |  |  +++1800000+++ | 
| Num Tests Per Eviction Run a| Number |  |  +++3+++ | 
| Test On Create a| Boolean |  |  +++false+++ | 
| Test On Borrow a| Boolean |  |  +++false+++ | 
| Test On Return a| Boolean |  |  +++false+++ | 
| Test While Idle a| Boolean |  |  +++false+++ | 
| Time Between Eviction Runs Millis a| Number |  |  +++-1+++ | 
| Block When Exhausted a| Boolean |  |  +++true+++ | 
| Jmx Enabled a| Boolean |  |  +++true+++ | 
| Jmx Name Prefix a| String |  |  +++pool+++ | 
| Jmx Name Base a| String |  |  | 
| Connection Timeout a| Number |  +++Connection timeout in milliseconds.+++ |  +++2000+++ | 
| Password a| String |  +++Redis password. Set this in case that the server requires authentication.+++ |  | 
| Entry TTL a| Number |  +++The default time to live to be set on keys stored through connector.+++ |  | 
| Cluster Hosts a| String |  +++Redis cluster hosts separated by comma and having format host:port. Use this field when you want to access you Redis cluster through connector.+++ |  | x
| Reconnection a| <<Reconnection>> |  +++When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy+++ |  | 
|===
[[redis_nonclustered]]
===== NonClustered


====== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Endpoint identification algorithm a| Enumeration, one of:

** HTTPS
** LDAPS
** DISABLED |  +++The endpoint identification algorithm used by clients to validate server host name. The default value is an empty string, which means it is disabled. Clients including client connections created by the broker for inter-broker communication verify that the broker host name matches the host name in the brokers certificate.+++ |  +++DISABLED+++ | 
| TLS Configuration a| <<Tls>> |  +++Protocol to use for communication. Valid values are HTTP and HTTPS. Default value is HTTP. When using HTTPS the HTTP communication is going to be secured using TLS / SSL. If HTTPS was configured as protocol then the user needs to configure at least the keystore in the tls:context child element of this listener-config.+++ |  | 
| Max Total a| Number |  |  +++8+++ | 
| Max Idle a| Number |  |  +++8+++ | 
| Min Idle a| Number |  |  +++0+++ | 
| Lifo a| Boolean |  |  +++true+++ | 
| Fairness a| Boolean |  |  +++false+++ | 
| Max Wait Millis a| Number |  |  +++-1+++ | 
| Min Evictable Idle Time Millis a| Number |  |  +++1800000+++ | 
| Soft Min Evictable Idle Time Millis a| Number |  |  +++1800000+++ | 
| Num Tests Per Eviction Run a| Number |  |  +++3+++ | 
| Test On Create a| Boolean |  |  +++false+++ | 
| Test On Borrow a| Boolean |  |  +++false+++ | 
| Test On Return a| Boolean |  |  +++false+++ | 
| Test While Idle a| Boolean |  |  +++false+++ | 
| Time Between Eviction Runs Millis a| Number |  |  +++-1+++ | 
| Block When Exhausted a| Boolean |  |  +++true+++ | 
| Jmx Enabled a| Boolean |  |  +++true+++ | 
| Jmx Name Prefix a| String |  |  +++pool+++ | 
| Jmx Name Base a| String |  |  | 
| Connection Timeout a| Number |  +++Connection timeout in milliseconds.+++ |  +++2000+++ | 
| Password a| String |  +++Redis password. Set this in case that the server requires authentication.+++ |  | 
| Entry TTL a| Number |  +++The default time to live to be set on keys stored through connector.+++ |  | 
| Host a| String |  +++Redis host. Use this field when you want to access you Redis server that is not part of a cluster through connector.+++ |  +++localhost+++ | 
| Port a| Number |  +++Redis port. The port on which your non cluster server is running.+++ |  +++6379+++ | 
| Reconnection a| <<Reconnection>> |  +++When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy+++ |  | 
|===

== Supported Operations
* <<addToSet>> 
* <<addToSortedSet>> 
* <<decrement>> 
* <<del>> 
* <<exists>> 
* <<expire>> 
* <<expireAt>> 
* <<get>> 
* <<getAllFromHash>> 
* <<getFromHash>> 
* <<getRangeByIndex>> 
* <<getRangeByScore>> 
* <<getTtl>> 
* <<increment>> 
* <<incrementHash>> 
* <<incrementSortedSet>> 
* <<persist>> 
* <<popFromList>> 
* <<popFromSet>> 
* <<publish>> 
* <<pushToList>> 
* <<randomMemberFromSet>> 
* <<set>> 
* <<setInHash>> 

==== Associated Sources
* <<subscribe>> 


== Operations

[[addToSet]]
=== Add To Set
`<redis:add-to-set>`

+++
Add the message payload to the set stored at the specified key. If key does not exist, a new key holding a set is created. 
+++

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  +++Key to use for SADD+++ |  | x
| Value a| String |  +++The value to set.+++ |  `#[payload]` | 
| Must Succeed a| Boolean |  +++If true, ensures that adding to the set was successful (ie no pre-existing identical value in the set)+++ |  +++false+++ | 
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  | 
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable+++ |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<redis>> 

==== Throws
* REDIS:CONNECTIVITY 
* REDIS:INVALID_CONFIGURATION 
* REDIS:INVALID_REQUEST_DATA 
* REDIS:INVALID_STRUCTURE_FOR_INPUT_DATA 
* REDIS:RETRY_EXHAUSTED 
* REDIS:UNKNOWN 
* REDIS:UNABLE_TO_UNSUBSCRIBE 


[[addToSortedSet]]
=== Add To Sorted Set
`<redis:add-to-sorted-set>`

+++
Add the message payload with the desired score to the sorted set stored at the specified key. If key does not exist, a new key holding a sorted set is created. 
+++

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  +++Key to use for ZADD+++ |  | x
| Value a| String |  +++The value to set.+++ |  `#[payload]` | 
| Score a| Number |  +++Score to use for the value+++ |  | x
| Must Succeed a| Boolean |  +++If true, ensures that adding to the sorted set was successful (ie no pre-existing identical value in the set)+++ |  +++false+++ | 
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  | 
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable+++ |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<redis>> 

==== Throws
* REDIS:CONNECTIVITY 
* REDIS:INVALID_CONFIGURATION 
* REDIS:INVALID_REQUEST_DATA 
* REDIS:INVALID_STRUCTURE_FOR_INPUT_DATA 
* REDIS:RETRY_EXHAUSTED 
* REDIS:UNKNOWN 
* REDIS:UNABLE_TO_UNSUBSCRIBE 


[[decrement]]
=== Decrement
`<redis:decrement>`

+++
Decrements the number stored at key by step. If the key does not exist, it is set to 0 before performing the operation. An error is returned if the key contains a value of the wrong type or contains data that can not be represented as integer. 
+++

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  +++Key to use for DECR.+++ |  | x
| Step a| Number |  +++Step used for the increment.+++ |  +++1+++ | 
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  | 
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable+++ |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Number
|===

=== For Configurations
* <<redis>> 

==== Throws
* REDIS:CONNECTIVITY 
* REDIS:INVALID_CONFIGURATION 
* REDIS:INVALID_REQUEST_DATA 
* REDIS:INVALID_STRUCTURE_FOR_INPUT_DATA 
* REDIS:RETRY_EXHAUSTED 
* REDIS:UNKNOWN 
* REDIS:UNABLE_TO_UNSUBSCRIBE 


[[del]]
=== Del
`<redis:del>`

+++
Remove the specified key. A key is ignored if it does not exist. 
+++

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  +++Key to use for DEL+++ |  | x
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  | 
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable+++ |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Number
|===

=== For Configurations
* <<redis>> 

==== Throws
* REDIS:CONNECTIVITY 
* REDIS:INVALID_CONFIGURATION 
* REDIS:INVALID_REQUEST_DATA 
* REDIS:INVALID_STRUCTURE_FOR_INPUT_DATA 
* REDIS:RETRY_EXHAUSTED 
* REDIS:UNKNOWN 
* REDIS:UNABLE_TO_UNSUBSCRIBE 


[[exists]]
=== Exists
`<redis:exists>`

+++
Test if the specified key exists. 
+++

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  +++Key to use for EXISTS+++ |  | x
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  | 
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable+++ |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Boolean
|===

=== For Configurations
* <<redis>> 

==== Throws
* REDIS:CONNECTIVITY 
* REDIS:INVALID_CONFIGURATION 
* REDIS:INVALID_REQUEST_DATA 
* REDIS:INVALID_STRUCTURE_FOR_INPUT_DATA 
* REDIS:RETRY_EXHAUSTED 
* REDIS:UNKNOWN 
* REDIS:UNABLE_TO_UNSUBSCRIBE 


[[expire]]
=== Expire
`<redis:expire>`

+++
Set a timeout on the specified key. 
+++

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  +++The key in the sorted set.+++ |  | x
| Seconds a| Number |  +++The time to live in seconds.+++ |  | x
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  | 
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable+++ |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Boolean
|===

=== For Configurations
* <<redis>> 

==== Throws
* REDIS:CONNECTIVITY 
* REDIS:INVALID_CONFIGURATION 
* REDIS:INVALID_REQUEST_DATA 
* REDIS:INVALID_STRUCTURE_FOR_INPUT_DATA 
* REDIS:RETRY_EXHAUSTED 
* REDIS:UNKNOWN 
* REDIS:UNABLE_TO_UNSUBSCRIBE 


[[expireAt]]
=== Expire At
`<redis:expire-at>`

+++
Set a timeout in the form of a UNIX timestamp (Number of seconds elapsed since 1 Jan 1970) on the specified key. 
+++

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  +++The key in the sorted set.+++ |  | x
| Unix Time a| Number |  +++The UNIX timestamp in seconds.+++ |  | x
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  | 
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable+++ |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Boolean
|===

=== For Configurations
* <<redis>> 

==== Throws
* REDIS:CONNECTIVITY 
* REDIS:INVALID_CONFIGURATION 
* REDIS:INVALID_REQUEST_DATA 
* REDIS:INVALID_STRUCTURE_FOR_INPUT_DATA 
* REDIS:RETRY_EXHAUSTED 
* REDIS:UNKNOWN 
* REDIS:UNABLE_TO_UNSUBSCRIBE 


[[get]]
=== Get
`<redis:get>`

+++
Get the value of the specified key. If the key does not exist null is returned. 
+++

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  +++Key to use for GET+++ |  | x
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  | 
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable+++ |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<redis>> 

==== Throws
* REDIS:CONNECTIVITY 
* REDIS:INVALID_CONFIGURATION 
* REDIS:INVALID_REQUEST_DATA 
* REDIS:INVALID_STRUCTURE_FOR_INPUT_DATA 
* REDIS:RETRY_EXHAUSTED 
* REDIS:UNKNOWN 
* REDIS:UNABLE_TO_UNSUBSCRIBE 


[[getAllFromHash]]
=== Get All From Hash
`<redis:get-all-from-hash>`

+++
Get all fields and values of the hash stored at the specified key. If the field or the hash don't exist, null is returned. 
+++

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  +++Key to use for HGETALL+++ |  | x
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  | 
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable+++ |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== For Configurations
* <<redis>> 

==== Throws
* REDIS:CONNECTIVITY 
* REDIS:INVALID_CONFIGURATION 
* REDIS:INVALID_REQUEST_DATA 
* REDIS:INVALID_STRUCTURE_FOR_INPUT_DATA 
* REDIS:RETRY_EXHAUSTED 
* REDIS:UNKNOWN 
* REDIS:UNABLE_TO_UNSUBSCRIBE 


[[getFromHash]]
=== Get From Hash
`<redis:get-from-hash>`

+++
Get the value stored at the specified field in the hash at the specified key. If the field or the hash don't exist, null is returned. 
+++

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  +++Key to use for HGET+++ |  | x
| Field a| String |  +++Field to use for HGET+++ |  | x
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  | 
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable+++ |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<redis>> 

==== Throws
* REDIS:CONNECTIVITY 
* REDIS:INVALID_CONFIGURATION 
* REDIS:INVALID_REQUEST_DATA 
* REDIS:INVALID_STRUCTURE_FOR_INPUT_DATA 
* REDIS:RETRY_EXHAUSTED 
* REDIS:UNKNOWN 
* REDIS:UNABLE_TO_UNSUBSCRIBE 


[[getRangeByIndex]]
=== Get Range By Index
`<redis:get-range-by-index>`

+++
Retrieve a range of values from the sorted set stored at the specified key. The range of values is defined by indices in the sorted set and sorted as desired. 
+++

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  +++Key to use for ZRANGE/ZREVRANGE+++ |  | x
| Start a| Number |  +++Range start index+++ |  | x
| End a| Number |  +++Range end index+++ |  | x
| Ascending Order a| Boolean |  +++Index order for sorting the range, true = ASCENDING / false = DESCENDING+++ |  +++true+++ | 
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  | 
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable+++ |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of String
|===

=== For Configurations
* <<redis>> 

==== Throws
* REDIS:CONNECTIVITY 
* REDIS:INVALID_CONFIGURATION 
* REDIS:INVALID_REQUEST_DATA 
* REDIS:INVALID_STRUCTURE_FOR_INPUT_DATA 
* REDIS:RETRY_EXHAUSTED 
* REDIS:UNKNOWN 
* REDIS:UNABLE_TO_UNSUBSCRIBE 


[[getRangeByScore]]
=== Get Range By Score
`<redis:get-range-by-score>`

+++
Retrieve a range of values from the sorted set stored at the specified key. The range of values is defined by scores in the sorted set and sorted as desired. 
+++

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  +++Key to use for ZRANGEBYSCORE/ZREVRANGEBYSCORE+++ |  | x
| Min a| Number |  +++Range start score+++ |  | x
| Max a| Number |  +++Range end score+++ |  | x
| Ascending Order a| Boolean |  +++Score order for sorting the range, true = ASCENDING / false = DESCENDING+++ |  +++true+++ | 
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  | 
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable+++ |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of String
|===

=== For Configurations
* <<redis>> 

==== Throws
* REDIS:CONNECTIVITY 
* REDIS:INVALID_CONFIGURATION 
* REDIS:INVALID_REQUEST_DATA 
* REDIS:INVALID_STRUCTURE_FOR_INPUT_DATA 
* REDIS:RETRY_EXHAUSTED 
* REDIS:UNKNOWN 
* REDIS:UNABLE_TO_UNSUBSCRIBE 


[[getTtl]]
=== Get Ttl
`<redis:get-ttl>`

+++
Get the remaining time to live in seconds of a volatile key. 
+++

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  +++The key in the sorted set.+++ |  | x
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  | 
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable+++ |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Number
|===

=== For Configurations
* <<redis>> 

==== Throws
* REDIS:CONNECTIVITY 
* REDIS:INVALID_CONFIGURATION 
* REDIS:INVALID_REQUEST_DATA 
* REDIS:INVALID_STRUCTURE_FOR_INPUT_DATA 
* REDIS:RETRY_EXHAUSTED 
* REDIS:UNKNOWN 
* REDIS:UNABLE_TO_UNSUBSCRIBE 


[[increment]]
=== Increment
`<redis:increment>`

+++
Increments the number stored at key by step. If the key does not exist, it is set to 0 before performing the operation. An error is returned if the key contains a value of the wrong type or contains data that can not be represented as integer. 
+++

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  +++Key to use for INCR.+++ |  | x
| Step a| Number |  +++Step used for the increment.+++ |  +++1+++ | 
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  | 
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable+++ |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Number
|===

=== For Configurations
* <<redis>> 

==== Throws
* REDIS:CONNECTIVITY 
* REDIS:INVALID_CONFIGURATION 
* REDIS:INVALID_REQUEST_DATA 
* REDIS:INVALID_STRUCTURE_FOR_INPUT_DATA 
* REDIS:RETRY_EXHAUSTED 
* REDIS:UNKNOWN 
* REDIS:UNABLE_TO_UNSUBSCRIBE 


[[incrementHash]]
=== Increment Hash
`<redis:increment-hash>`

+++
Increments the number stored at field in the hash stored at key by increment. If key does not exist, a new key holding a hash is created. If field does not exist the value is set to 0 before the operation is performed. 
+++

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  +++Key to use for HGET+++ |  | x
| Field a| String |  +++Field to use for HGET+++ |  | x
| Step a| Number |  +++Step used for the increment.+++ |  +++1+++ | 
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  | 
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable+++ |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Number
|===

=== For Configurations
* <<redis>> 

==== Throws
* REDIS:CONNECTIVITY 
* REDIS:INVALID_CONFIGURATION 
* REDIS:INVALID_REQUEST_DATA 
* REDIS:INVALID_STRUCTURE_FOR_INPUT_DATA 
* REDIS:RETRY_EXHAUSTED 
* REDIS:UNKNOWN 
* REDIS:UNABLE_TO_UNSUBSCRIBE 


[[incrementSortedSet]]
=== Increment Sorted Set
`<redis:increment-sorted-set>`

+++
Increments the score of member in the sorted set stored at key by increment. If member does not exist in the sorted set, it is added with increment as its score (as if its previous score was 0.0). If key does not exist, a new sorted set with the specified member as its sole member is created. 
+++

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  +++The key in the sorted set.+++ |  | x
| Value a| String |  +++The value to set.+++ |  `#[payload]` | 
| Step a| Number |  +++The step to use to increment the score.+++ |  | x
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  | 
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable+++ |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Number
|===

=== For Configurations
* <<redis>> 

==== Throws
* REDIS:CONNECTIVITY 
* REDIS:INVALID_CONFIGURATION 
* REDIS:INVALID_REQUEST_DATA 
* REDIS:INVALID_STRUCTURE_FOR_INPUT_DATA 
* REDIS:RETRY_EXHAUSTED 
* REDIS:UNKNOWN 
* REDIS:UNABLE_TO_UNSUBSCRIBE 


[[persist]]
=== Persist
`<redis:persist>`

+++
Undo an expire or expireAt ; turning the volatile key into a normal key. 
+++

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  +++The key in the sorted set.+++ |  | x
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  | 
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable+++ |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Boolean
|===

=== For Configurations
* <<redis>> 

==== Throws
* REDIS:CONNECTIVITY 
* REDIS:INVALID_CONFIGURATION 
* REDIS:INVALID_REQUEST_DATA 
* REDIS:INVALID_STRUCTURE_FOR_INPUT_DATA 
* REDIS:RETRY_EXHAUSTED 
* REDIS:UNKNOWN 
* REDIS:UNABLE_TO_UNSUBSCRIBE 


[[popFromList]]
=== Pop From List
`<redis:pop-from-list>`

+++
Pop a value from the desired side of the list stored at the specified key. 
+++

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  +++Key to use for LPOP/RPOP+++ |  | x
| Pop Left a| Boolean |  +++The side where to pop the value from, true = LEFT | false = RIGHT+++ |  +++false+++ | 
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  | 
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable+++ |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<redis>> 

==== Throws
* REDIS:CONNECTIVITY 
* REDIS:INVALID_CONFIGURATION 
* REDIS:INVALID_REQUEST_DATA 
* REDIS:INVALID_STRUCTURE_FOR_INPUT_DATA 
* REDIS:RETRY_EXHAUSTED 
* REDIS:UNKNOWN 
* REDIS:UNABLE_TO_UNSUBSCRIBE 


[[popFromSet]]
=== Pop From Set
`<redis:pop-from-set>`

+++
Pops a random value from the set stored at the specified key. 
+++

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  +++Key to use for SPOP+++ |  | x
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  | 
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable+++ |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<redis>> 

==== Throws
* REDIS:CONNECTIVITY 
* REDIS:INVALID_CONFIGURATION 
* REDIS:INVALID_REQUEST_DATA 
* REDIS:INVALID_STRUCTURE_FOR_INPUT_DATA 
* REDIS:RETRY_EXHAUSTED 
* REDIS:UNKNOWN 
* REDIS:UNABLE_TO_UNSUBSCRIBE 


[[publish]]
=== Publish
`<redis:publish>`

+++
Publish the message payload to the specified channel. 
+++

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Channel a| String |  +++Destination of the published message+++ |  | x
| Message a| String |  +++The message to publish.+++ |  | x
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  | 
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable+++ |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Boolean
|===

=== For Configurations
* <<redis>> 

==== Throws
* REDIS:CONNECTIVITY 
* REDIS:INVALID_CONFIGURATION 
* REDIS:INVALID_REQUEST_DATA 
* REDIS:INVALID_STRUCTURE_FOR_INPUT_DATA 
* REDIS:RETRY_EXHAUSTED 
* REDIS:UNKNOWN 
* REDIS:UNABLE_TO_UNSUBSCRIBE 


[[pushToList]]
=== Push To List
`<redis:push-to-list>`

+++
Push the message payload to the desired side (LEFT or RIGHT) of the list stored at the specified key. If key does not exist, a new key holding a list is created as long as ifExists is not true. 
+++

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  +++Key to use for LPUSH/RPUSH/LPUSHX/RPUSH+++ |  | x
| Value a| String |  +++The value to push.+++ |  `#[payload]` | 
| Push Left a| Boolean |  +++The side where to push the payload, either LEFT or RIGHT+++ |  +++false+++ | 
| If Exists a| Boolean |  +++If true execute LPUSHX/RPUSH otherwise LPUSH/RPUSH+++ |  +++false+++ | 
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  | 
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable+++ |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<redis>> 

==== Throws
* REDIS:CONNECTIVITY 
* REDIS:INVALID_CONFIGURATION 
* REDIS:INVALID_REQUEST_DATA 
* REDIS:INVALID_STRUCTURE_FOR_INPUT_DATA 
* REDIS:RETRY_EXHAUSTED 
* REDIS:UNKNOWN 
* REDIS:UNABLE_TO_UNSUBSCRIBE 


[[randomMemberFromSet]]
=== Random Member From Set
`<redis:random-member-from-set>`

+++
Reads a random value from the set stored at the specified key. 
+++

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  +++Key to use for SRANDMEMBER+++ |  | x
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  | 
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable+++ |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<redis>> 

==== Throws
* REDIS:CONNECTIVITY 
* REDIS:INVALID_CONFIGURATION 
* REDIS:INVALID_REQUEST_DATA 
* REDIS:INVALID_STRUCTURE_FOR_INPUT_DATA 
* REDIS:RETRY_EXHAUSTED 
* REDIS:UNKNOWN 
* REDIS:UNABLE_TO_UNSUBSCRIBE 


[[set]]
=== Set
`<redis:set>`

+++
Set key to hold the payload. If key already holds a value, it is overwritten, regardless of its type as long as ifNotExists is false. 
+++

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  +++Key used to store payload+++ |  | x
| Value a| String |  +++The value to set.+++ |  `#[payload]` | 
| Expire a| Number |  +++Set a timeout on the specified key. After the timeout the key will be automatically deleted by the server. A key with an associated timeout is said to be volatile in Redis terminology.+++ |  | 
| If Not Exists a| Boolean |  +++If true, then execute SETNX on the Redis server, otherwise execute SET+++ |  +++false+++ | 
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  | 
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable+++ |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<redis>> 

==== Throws
* REDIS:CONNECTIVITY 
* REDIS:INVALID_CONFIGURATION 
* REDIS:INVALID_REQUEST_DATA 
* REDIS:INVALID_STRUCTURE_FOR_INPUT_DATA 
* REDIS:RETRY_EXHAUSTED 
* REDIS:UNKNOWN 
* REDIS:UNABLE_TO_UNSUBSCRIBE 


[[setInHash]]
=== Set In Hash
`<redis:set-in-hash>`

+++
Set the specified hash field to the message payload. If key does not exist, a new key holding a hash is created as long as ifNotExists is true. 
+++

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  +++Key to use for HSET+++ |  | x
| Value a| String |  +++The value to set.+++ |  `#[payload]` | 
| Field a| String |  +++Field to use for HSET+++ |  | 
| If Not Exists a| Boolean |  +++If true execute HSETNX otherwise HSET+++ |  +++false+++ | 
| Target Variable a| String |  +++The name of a variable to store the operation's output.+++ |  | 
| Target Value a| String |  +++An expression to evaluate against the operation's output and store the expression outcome in the target variable+++ |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<redis>> 

==== Throws
* REDIS:CONNECTIVITY 
* REDIS:INVALID_CONFIGURATION 
* REDIS:INVALID_REQUEST_DATA 
* REDIS:INVALID_STRUCTURE_FOR_INPUT_DATA 
* REDIS:RETRY_EXHAUSTED 
* REDIS:UNKNOWN 
* REDIS:UNABLE_TO_UNSUBSCRIBE 


== Sources

[[subscribe]]
=== Subscribe
`<redis:subscribe>`


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Channels a| Array of String |  +++A list of channel names or globbing patterns.+++ |  | x
| Output Mime Type a| String |  +++The mime type of the payload that this operation outputs.+++ |  | 
| Primary Node Only a| Boolean |  +++Whether this source should only be executed on the primary node when running in Cluster+++ |  | 
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  +++Configure to use repeatable streams.+++ |  | 
| Redelivery Policy a| <<RedeliveryPolicy>> |  +++Defines a policy for processing the redelivery of the same message+++ |  | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  +++A retry strategy in case of connectivity errors.+++ |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<SubscribeChannelAttributes>>
|===

=== For Configurations
* <<redis>> 



== Types
[[Tls]]
=== Tls

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma separated list of protocols enabled for this context. |  | 
| Enabled Cipher Suites a| String | A comma separated list of cipher suites enabled for this context. |  | 
| Trust Store a| <<TrustStore>> |  |  | 
| Key Store a| <<KeyStore>> |  |  | 
| Revocation Check a| * <<standard-revocation-check>>
* <<custom-ocsp-responder>>
* <<crl-file>> |  |  | 
|===

[[TrustStore]]
=== Trust Store

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the trust store. |  | 
| Password a| String | The password used to protect the trust store. |  | 
| Type a| String | The type of store used. |  | 
| Algorithm a| String | The algorithm used by the trust store. |  | 
| Insecure a| Boolean | If true, no certificate validations will be performed, rendering connections vulnerable to attacks. Use at your own risk. |  | 
|===

[[KeyStore]]
=== Key Store

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the key store. |  | 
| Type a| String | The type of store used. |  | 
| Alias a| String | When the key store contains many private keys, this attribute indicates the alias of the key that should be used. If not defined, the first key in the file will be used by default. |  | 
| Key Password a| String | The password used to protect the private key. |  | 
| Password a| String | The password used to protect the key store. |  | 
| Algorithm a| String | The algorithm used by the key store. |  | 
|===

[[standard-revocation-check]]
=== Standard Revocation Check

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Only verify the last element of the certificate chain. |  | 
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  | 
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before). |  | 
| Soft Fail a| Boolean | Avoid verification failure when the revocation server can not be reached or is busy. |  | 
|===

[[custom-ocsp-responder]]
=== Custom Ocsp Responder

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  | 
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the trust store), if present. |  | 
|===

[[crl-file]]
=== Crl File

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  | 
|===

[[Reconnection]]
=== Reconnection

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  | 
|===

[[reconnect]]
=== Reconnect

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect |  | 
| Count a| Number | How many reconnection attempts to make. |  | 
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect |  | 
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  | 
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  | 
|===

[[SubscribeChannelAttributes]]
=== Subscribe Channel Attributes

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Channel a| String |  |  | 
|===

[[repeatable-in-memory-stream]]
=== Repeatable In Memory Stream

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of memory that will be allocated to consume the stream and provide random access to it. If the stream contains more data than can be fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. |  | 
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. |  | 
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  | 
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which all these attributes are expressed |  | 
|===

[[repeatable-file-store-stream]]
=== Repeatable File Store Stream

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Defines the maximum memory that the stream should use to keep data in memory. If more than that is consumed then it will start to buffer the content on disk. |  | 
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  | 
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | The maximum number of times a message can be redelivered and processed unsuccessfully before triggering process-failed-message |  | 
| Use Secure Hash a| Boolean | Whether to use a secure hash algorithm to identify a redelivered message. |  | 
| Message Digest Algorithm a| String | The secure hashing algorithm to use. If not set, the default is SHA-256. |  | 
| Id Expression a| String | Defines one or more expressions to use to determine when a message has been redelivered. This property may only be set if useSecureHash is false. |  | 
| Object Store a| Object Store | The object store where the redelivery counter for each message is going to be stored. |  | 
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
